--- a/include/executiontrace/Han/changelog
+++ b/include/executiontrace/Han/changelog
@@ -1,1 +1,13 @@
 Han's log file:
+02-22-2016 linking jasmine to execution trace code for testing
+
+
+
+
+
+
+Task list:
+1) linking jasmine to execution trace code
+2) list out all the functions for testing
+3) developing a control flow graph or other testing methods for the list of functions
+4) start writing tests for each of the decision path
